# src/validation/category.validation.js
@@ -15,19 +15,15 @@ const createcatrgory = {
 }
 
 const updateCategory = {
-    body: Joi.object().keys({// Assuming ObjectId
-        _id: Joi.string().length(24).required(),
-        name: Joi.string().required().max(30).trim().uppercase(),            // Required field
-        description: Joi.string().required().max(100).optional(),     // Optional field
-        is_active: Joi.boolean().optional(),      // Optional field
-        createdAt: Joi.date().optional(),         // Optional field
-        updatedAt: Joi.date().optional()  
-
+    body: Joi.object().keys({
+        name: Joi.string().required().max(30),
+        description: Joi.string().required(),
+        // image: Joi.string()
     }),
-    params: Joi.object().keys({ 
-        category_id: Joi.string().length(24).required(),
-    }),
-};
+    params: Joi.object().keys({
+        category_id: Joi.string().required()
+    })
+}
 
 const deleteCategory = {
     params: Joi.object().keys({
